--- a/styles.css
+++ b/styles.css
@@ -3,48 +3,66 @@ body {
 }
 
 .title {
-    margin: 0;
+    margin: 10px auto 2px 4px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     float: left;
 }
 
 .calcContainer {
+    display: flex;
+    flex-direction: column;
     margin: 50px auto 25px auto;
     padding: 20px 20px 20px 20px;
     width: 225px;
-    height: 260px;
+    height: auto;
     background-color: lightgray;
     border: 1px solid black;
     border-radius: 5px;
     box-shadow: 5px 5px gray;
 }
 
-.results {
+.resultsContainer {
+    display: flex;
+    flex-direction: column;
     background-color: whitesmoke;
     border: 3px solid black;
     border-radius: 6px;
-    text-align: center;
+    line-height: 25px;
+    min-width: 95%;
+}
+
+.result {
+    text-align: right;
     vertical-align: center;
-    font-size: x-large;
-    height: 50px;
-    line-height: 50px;
+    font-size: auto;
+    min-height: 25px; 
+    margin-right: 10px;
+}
+
+.input {
+    text-align: right;
+    vertical-align: center;
+    font-size: auto;
+    min-height: 25px;    
+    margin-right: 10px
 }
 
 .numpad {
     background-color: white;
-    width: 45px;
+    width: 100%;
     height: 35px;
     margin: 2px;
 }
 
 .operator {
     background-color: lightblue;
-    width: 45px;
+    width: 100%;
     height: 35px;
     margin: 2px;
 }
 
 .numpadVertical {
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,4 +74,13 @@ body {
     flex-direction: row;
     align-items: center;
     justify-items: center;
+    width: 100%;
+}
+
+.clear {
+    flex-grow: 2;
+}
+
+.clearContainer {
+    width: 100%;
 }
